--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "hbs": "^4.0.5",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
